# OrionEngine

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json  compile_shaders.sh  format-all.sh  main.cpp
assets/shaders/: default.frag.glsl
engine/: CMakeLists.txt  Makefile  cmake_install.cmake
engine/include/engine/: application.h  asserts.h  filesystem.h  logger.h  platform.h  renderer.h  renderer_backend.h  renderer_types.inl
engine/include/engine/vulkan/: vulkan_buffer.h  vulkan_command_buffer.h  vulkan_device.h  vulkan_image.h  vulkan_pipeline.h  vulkan_renderpass.h  vulkan_shader.h  vulkan_swapchain.h
engine/src/: application.cpp  filesystem.cpp  logger.cpp  platform.cpp  renderer.cpp  renderer_backend.cpp
engine/src/vulkan/: vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_device.cpp  vulkan_image.cpp  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp
